--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pengenalan Wajah</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
+    
+    <video autoplay muted loop class="video-background">
+        <source src="{{ url_for('static', filename='img/video.mp4') }}" type="video/mp4">
+    </video>
+
     <h1>Upload Gambar Wajah untuk Pengenalan</h1>
     
-    <!-- Form untuk mengunggah gambar -->
+    
     <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data">
         <input type="file" name="file" accept="image/*" required>
         <button type="submit">Upload</button>
     </form>
 </body>
-</html>
+</html> 
